Add Design to LoginFragment

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,64 +10,91 @@
         tools:context=".view.LoginFragment">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/title_login"
+            style="@style/Headline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_horizontal_basic"
             android:text="@string/title_login_fragment"
-            app:layout_constraintBottom_toTopOf="@+id/label_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_login_fragment"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/field_password" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/label_email"
+            style="@style/Caption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_email"
             app:layout_constraintBottom_toTopOf="@+id/field_email"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintStart_toStartOf="@+id/field_email"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/label_password"
+            style="@style/Caption"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gutter_horizontal_basic"
             android:text="@string/label_password"
             app:layout_constraintBottom_toTopOf="@+id/field_password"
-            app:layout_constraintStart_toStartOf="@+id/field_email"
+            app:layout_constraintStart_toStartOf="@+id/field_password"
             app:layout_constraintTop_toBottomOf="@+id/field_email" />
 
         <EditText
             android:id="@+id/field_password"
+            style="@style/Subtitle1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gutter_horizontal_basic"
             android:ems="10"
+            android:hint="@string/field_password"
             android:inputType="textPassword"
-            app:layout_constraintBottom_toTopOf="@+id/btn_login"
-            app:layout_constraintStart_toStartOf="@+id/label_password"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/label_password" />
 
         <EditText
             android:id="@+id/field_email"
+            style="@style/Subtitle1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gutter_horizontal_basic"
+            android:layout_marginBottom="@dimen/gutter_horizontal_basic"
             android:ems="10"
             android:hint="@string/field_email"
             android:inputType="textEmailAddress"
             app:layout_constraintBottom_toTopOf="@+id/label_password"
-            app:layout_constraintStart_toStartOf="@+id/label_email"
+            app:layout_constraintStart_toStartOf="@+id/label_password"
             app:layout_constraintTop_toBottomOf="@+id/label_email" />
+
+        <Button
+            android:id="@+id/btn_login"
+            style="@style/Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_vertical_basic"
+            android:layout_marginBottom="@dimen/margin_horizontal_basic"
+            android:text="@string/btn_log_in"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_sign_in"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_sign_in"
+            style="@style/Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_vertical_basic"
+            android:text="@string/btn_sign_in"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_login"
+            app:layout_constraintTop_toTopOf="@+id/btn_login" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
