--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,9 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
+
+    <style name="Body" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
 </resources>
