--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,11 @@
         <item name="android:fontFamily">@font/roboto_light</item>
     </style>
 
+    <style name="Headline5" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/roboto_light</item>
+    </style>
+
     <style name="Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/roboto</item>
@@ -20,7 +25,7 @@
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="Body" parent="TextAppearance.MaterialComponents.Body1">
+    <style name="Body" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
     </style>
