--- a/app/src/main/res/layout/fragment_onboard_welcome.xml
+++ b/app/src/main/res/layout/fragment_onboard_welcome.xml
@@ -35,7 +35,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            android:contentDescription="@string/content_description_image_logo" />
 
         <TextView
             android:id="@+id/tv_caption"
