--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -4,169 +4,187 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.ShoeListFragment">
 
-    <ScrollView
-        android:id="@+id/scrolling_to_list_of_shows"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/list_of_shoes"
-            android:layout_width="match_parent"
+        <ScrollView
+            android:id="@+id/scrolling_to_list_of_shows"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/list_of_shoes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/list_title"
+                    style="@style/Headline5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="@dimen/margin_vertical_basic"
+                    android:layout_marginTop="@dimen/margin_horizontal_basic"
+                    android:layout_marginEnd="@dimen/margin_vertical_basic"
+                    android:layout_marginBottom="@dimen/gutter_horizontal_basic"
+                    android:gravity="center_horizontal"
+                    android:text="@string/list_title" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/list_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_vertical_basic"
+                    android:layout_marginEnd="@dimen/margin_vertical_basic"
+                    android:layout_marginBottom="@dimen/gutter_horizontal_basic">
+
+                    <TextView
+                        android:id="@+id/item_name"
+                        style="@style/Subtitle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_name"
+                        app:layout_constraintBottom_toTopOf="@+id/item_description"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/list_item" />
+
+                    <ImageView
+                        android:id="@+id/item_img"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:contentDescription="@string/content_description_image_shoe"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_shopping_cart_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/item_description"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/item_name" />
+
+                    <TextView
+                        android:id="@+id/item_description"
+                        style="@style/Body"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_description"
+                        app:layout_constraintBottom_toBottomOf="@id/item_img"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toEndOf="@id/item_img"
+                        app:layout_constraintTop_toTopOf="@id/item_img" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/list_item2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_vertical_basic"
+                    android:layout_marginEnd="@dimen/margin_vertical_basic"
+                    android:layout_marginBottom="@dimen/gutter_horizontal_basic">
+
+                    <TextView
+                        android:id="@+id/item_name2"
+                        style="@style/Subtitle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_name"
+                        app:layout_constraintBottom_toTopOf="@+id/item_description2"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/list_item2" />
+
+                    <ImageView
+                        android:id="@+id/item_img2"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:contentDescription="@string/content_description_image_shoe"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_shopping_cart_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/item_description2"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/item_name2" />
+
+                    <TextView
+                        android:id="@+id/item_description2"
+                        style="@style/Body"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_description"
+                        app:layout_constraintBottom_toBottomOf="@id/item_img2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toEndOf="@id/item_img2"
+                        app:layout_constraintTop_toTopOf="@id/item_img2" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/list_item3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_vertical_basic"
+                    android:layout_marginEnd="@dimen/margin_vertical_basic"
+                    android:layout_marginBottom="@dimen/gutter_horizontal_basic">
+
+                    <TextView
+                        android:id="@+id/item_name3"
+                        style="@style/Subtitle1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_name"
+                        app:layout_constraintBottom_toTopOf="@+id/item_description3"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@id/list_item3" />
+
+                    <ImageView
+                        android:id="@+id/item_img3"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:contentDescription="@string/content_description_image_shoe"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_baseline_shopping_cart_24"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/item_description3"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/item_name3" />
+
+                    <TextView
+                        android:id="@+id/item_description3"
+                        style="@style/Body"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/gutter_horizontal_basic"
+                        android:text="@string/item_description"
+                        app:layout_constraintBottom_toBottomOf="@id/item_img3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_chainStyle="spread"
+                        app:layout_constraintStart_toEndOf="@id/item_img3"
+                        app:layout_constraintTop_toTopOf="@id/item_img3" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </ScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add_shoe"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_margin="@dimen/margin_horizontal_basic"
+            android:contentDescription="@string/add_shoe"
+            android:src="@drawable/ic_baseline_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/list_title"
-                style="@style/Headline5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="@dimen/margin_vertical_basic"
-                android:layout_marginTop="@dimen/margin_horizontal_basic"
-                android:layout_marginEnd="@dimen/margin_vertical_basic"
-                android:layout_marginBottom="@dimen/gutter_horizontal_basic"
-                android:gravity="center_horizontal"
-                android:text="@string/list_title" />
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/list_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_vertical_basic"
-                android:layout_marginEnd="@dimen/margin_vertical_basic"
-                android:layout_marginBottom="@dimen/gutter_horizontal_basic">
-
-                <TextView
-                    android:id="@+id/item_name"
-                    style="@style/Subtitle1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_name"
-                    app:layout_constraintBottom_toTopOf="@+id/item_description"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/list_item" />
-
-                <ImageView
-                    android:id="@+id/item_img"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/content_description_image_shoe"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_shopping_cart_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/item_description"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/item_name" />
-
-                <TextView
-                    android:id="@+id/item_description"
-                    style="@style/Body"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_description"
-                    app:layout_constraintBottom_toBottomOf="@id/item_img"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toEndOf="@id/item_img"
-                    app:layout_constraintTop_toTopOf="@id/item_img" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/list_item2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_vertical_basic"
-                android:layout_marginEnd="@dimen/margin_vertical_basic"
-                android:layout_marginBottom="@dimen/gutter_horizontal_basic">
-
-                <TextView
-                    android:id="@+id/item_name2"
-                    style="@style/Subtitle1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_name"
-                    app:layout_constraintBottom_toTopOf="@+id/item_description2"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/list_item2" />
-
-                <ImageView
-                    android:id="@+id/item_img2"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/content_description_image_shoe"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_shopping_cart_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/item_description2"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/item_name2" />
-
-                <TextView
-                    android:id="@+id/item_description2"
-                    style="@style/Body"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_description"
-                    app:layout_constraintBottom_toBottomOf="@id/item_img2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toEndOf="@id/item_img2"
-                    app:layout_constraintTop_toTopOf="@id/item_img2" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/list_item3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_vertical_basic"
-                android:layout_marginEnd="@dimen/margin_vertical_basic"
-                android:layout_marginBottom="@dimen/gutter_horizontal_basic">
-
-                <TextView
-                    android:id="@+id/item_name3"
-                    style="@style/Subtitle1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_name"
-                    app:layout_constraintBottom_toTopOf="@+id/item_description3"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/list_item3" />
-
-                <ImageView
-                    android:id="@+id/item_img3"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:contentDescription="@string/content_description_image_shoe"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_shopping_cart_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/item_description3"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/item_name3" />
-
-                <TextView
-                    android:id="@+id/item_description3"
-                    style="@style/Body"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/gutter_horizontal_basic"
-                    android:text="@string/item_description"
-                    app:layout_constraintBottom_toBottomOf="@id/item_img3"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toEndOf="@id/item_img3"
-                    app:layout_constraintTop_toTopOf="@id/item_img3" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
