--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- TODO: Ask why this doesn't work when cited from main_activity#toolbar -->
+    <style name="Toolbar_Light" parent="ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="popupTheme">@style/ThemeOverlay.MaterialComponents.Dark</item>
+        <item name="background">@color/cyan_100</item>
+    </style>
+
     <style name="Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="android:textColor">@color/black</item>
         <item name="android:fontFamily">@font/roboto_light</item>
