--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,15 +7,17 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.shoestore.view.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="Login" >
+        <!-- launchSingleTop: when coming/falling back here, this won't be recreated again, ie no adding to the backstack again, but returning the previous instance of it -->
         <action
             android:id="@+id/action_loginFragment_to_onboardWelcomeFragment"
-            app:destination="@id/onboardWelcomeFragment" />
+            app:destination="@id/onboardWelcomeFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/onboardWelcomeFragment"
         android:name="com.example.shoestore.view.OnboardWelcomeFragment"
-        android:label="OnboardWelcomeFragment" >
+        android:label="Welcome On Board" >
         <action
             android:id="@+id/action_onboardWelcomeFragment_to_onboardInstructionFragment3"
             app:destination="@id/onboardInstructionFragment" />
@@ -23,27 +25,35 @@
     <fragment
         android:id="@+id/onboardInstructionFragment"
         android:name="com.example.shoestore.view.OnboardInstructionFragment"
-        android:label="OnboardInstructionFragment" >
+        android:label="How To Use This App" >
+        <!-- PopUpToInclusive: the backstack will be cleared by removing both this and the destination fragment https://developer.android.com/guide/navigation/navigation-navigate#pop -->
         <action
             android:id="@+id/action_onboardInstructionFragment_to_shoeListFragment"
-            app:destination="@id/shoeListFragment" />
+            app:destination="@id/shoeListFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/shoeListFragment"
         android:name="com.example.shoestore.view.ShoeListFragment"
-        android:label="ShoeListFragment"
+        android:label="List Of Shoes"
         tools:layout="@layout/fragment_shoe_list" >
+        <!-- launchSingleTop: when coming/falling back here, this won't be recreated again, ie no adding to the backstack again, but returning the previous instance of it -->
         <action
             android:id="@+id/action_shoeListFragment_to_shoeItemFragment"
-            app:destination="@id/shoeItemFragment" />
+            app:destination="@id/shoeItemFragment"
+            app:launchSingleTop="true"/>
     </fragment>
     <fragment
         android:id="@+id/shoeItemFragment"
         android:name="com.example.shoestore.ShoeItemFragment"
-        android:label="ShoeItemFragment"
+        android:label="Add A New Shoe"
         tools:layout="@layout/fragment_shoe_item" >
+        <!-- PopUpToInclusive: the backstack will be cleared by removing both this and the destination fragment https://developer.android.com/guide/navigation/navigation-navigate#pop -->
         <action
             android:id="@+id/action_shoeItemFragment_to_shoeListFragment"
-            app:destination="@id/shoeListFragment" />
+            app:destination="@id/shoeListFragment"
+            app:popUpTo="@id/shoeListFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
 </navigation>
