--- a/app/src/main/res/layout/fragment_shoe_item.xml
+++ b/app/src/main/res/layout/fragment_shoe_item.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.ShoeItemFragment">
 
+    <data>
+        <variable
+            name="shoeViewModel"
+            type="com.example.shoestore.viewmodel.ShoeViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
