--- a/app/src/main/res/layout/fragment_onboard_welcome.xml
+++ b/app/src/main/res/layout/fragment_onboard_welcome.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <!-- A flat hierarchy is more efficient for many child views placed all around in different places relative to each other -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/welcomeLayout"
         android:layout_width="match_parent"
@@ -29,14 +29,14 @@
             android:layout_marginStart="@dimen/margin_vertical_basic"
             android:layout_marginTop="@dimen/gutter_horizontal_basic"
             android:layout_marginEnd="@dimen/margin_vertical_basic"
+            android:contentDescription="@string/content_description_image_logo"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_vectorstock_35084815"
             app:layout_constraintBottom_toTopOf="@+id/tv_caption"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            android:contentDescription="@string/content_description_image_logo" />
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/tv_caption"
