--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.ShoeListFragment">
 
+    <!-- The relative positioning of a FAB is more effective with ConstraintLayout then with others -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,27 +17,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
+            <!-- ScrolView needs a layout as a child before views -->
             <LinearLayout
                 android:id="@+id/list_of_shoes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/list_title"
-                    style="@style/Headline5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="@dimen/margin_vertical_basic"
-                    android:layout_marginTop="@dimen/margin_horizontal_basic"
-                    android:layout_marginEnd="@dimen/margin_vertical_basic"
-                    android:layout_marginBottom="@dimen/gutter_horizontal_basic"
-                    android:gravity="center_horizontal"
-                    android:text="@string/list_title" />
-
-            </LinearLayout>
+                android:orientation="vertical" />
         </ScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
