--- a/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/app/src/main/res/layout/fragment_shoe_details.xml
@@ -5,7 +5,9 @@
     tools:context=".view.ShoeDetailsFragment">
 
     <data>
-
+        <variable
+            name="shoe"
+            type="com.example.shoestore.models.Shoe" />
         <variable
             name="shoeViewModel"
             type="com.example.shoestore.viewmodel.ShoeViewModel" />
@@ -51,6 +53,7 @@
             android:ems="10"
             android:hint="@string/field_shoe_name"
             android:inputType="textCapWords"
+            android:text="@={shoe.name}"
             app:layout_constraintBottom_toTopOf="@+id/label_shoe_company"
             app:layout_constraintStart_toStartOf="@+id/label_shoe_company"
             app:layout_constraintTop_toBottomOf="@+id/label_shoe_name"
@@ -78,6 +81,7 @@
             android:ems="10"
             android:hint="@string/field_shoe_company"
             android:inputType="textCapWords"
+            android:text="@={shoe.company}"
             app:layout_constraintBottom_toTopOf="@+id/label_shoe_size"
             app:layout_constraintStart_toStartOf="@+id/label_shoe_size"
             app:layout_constraintTop_toBottomOf="@+id/label_shoe_company"
@@ -105,6 +109,7 @@
             android:ems="10"
             android:hint="@string/field_shoe_size"
             android:inputType="number"
+            android:text="@={`` + shoe.size}"
             app:layout_constraintBottom_toTopOf="@+id/label_shoe_description"
             app:layout_constraintStart_toStartOf="@+id/label_shoe_description"
             app:layout_constraintTop_toBottomOf="@+id/label_shoe_size"
@@ -132,6 +137,7 @@
             android:ems="10"
             android:hint="@string/field_shoe_description"
             android:inputType="textCapSentences"
+            android:text="@={shoe.description}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +149,7 @@
             style="@style/Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> shoeViewModel.addShoe(shoe)}"
             android:layout_marginStart="@dimen/margin_vertical_basic"
             android:layout_marginBottom="@dimen/margin_horizontal_basic"
             android:text="@string/btn_save"
@@ -156,6 +163,7 @@
             style="@style/Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> shoeViewModel.onCancel()}"
             android:layout_marginEnd="@dimen/margin_vertical_basic"
             android:text="@string/btn_cancel"
             app:layout_constraintBottom_toBottomOf="@+id/btn_save"
